[package]
name = "drasil_or"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
tokio-serde = { version = "0.8.0", features = ["bincode"] }
tokio-util = { version = "0.7.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.91"
futures = "0.3.25"
pbkdf2 = { version = "0.11", default-features = false }
hmac = "0.12.1"
sha2 = "0.10.6"
x25519-dalek = "1.2.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rand = "0.7"